<resources>
    <string name="app_name">VeeZee</string>
    <string name="veezee">VeeZee by V-Assist</string>
    <string name="login">LOGIN</string>
    <string name="OR">OR</string>
    <string name="Enter_Mobile">ENTER MOBILE NUMBER</string>
    <string name="Proceed">PROCEED</string>
    <string name="By_proceeding">By proceeding, you agree to</string>
    <string name="term_condition"><u>Terms &amp; Conditions</u></string>
    <string name="term_condition_wdt_un">Terms &amp; Conditions</string>
    <string name="otp_send_to">OTP Sent to </string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resend">RESEND OTP</string>
    <string name="otp_expires">OTP Expires in 00:25</string>
    <string name="verify_proceed"> VERIFY &amp; PROCEED </string>
    <string name="name">NAME</string>
    <string name="gender">GENDER</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="email">EMAIL</string>
    <string name="state">STATE</string>
    <string name="city">CITY</string>
    <string name="brand">BRAND</string>
    <string name="color">COLOR</string>
    <string name="vehicle_no">VEHICLE NO.</string>
    <string name="generate_qr">GENERATE QR</string>
    <string name="verify_details">VERIFY DETAILS</string>
    <string name="added_car">Your car has been \nsuccessfully added </string>
    <string name="veezee_fm_v">VeeZee from V-Assist</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_title">Raj Saksena</string>
    <string name="btm_home">VALET</string>
    <string name="btm_partners">PARTNERS</string>
    <string name="btm_cars">CARS</string>
    <string name="btm_rewards">REWARDS</string>
    <string name="btm_wallet">VAULT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="We_all_need">We all need once a time to Burger</string>
    <string name="serves">Serves good food with Rs: 500 OFF \non Burgers from Uber eats </string>
    <string name="redeem">REDEEM</string>
    <string name="details">DETAILS</string>
    <string name="my_rewards">My Rewards</string>
    <string name="whats_inside">What"'"s inside</string>
    <string name="visit">Visit website</string>
    <string name="expair">Voucher expires on</string>
    <string name="note">Please note</string>
    <string name="how_to_redeem">How to redeem</string>
    <string name="View_rewards">VIEW CLAIMED REWARDS</string>
    <string name="link">http://www.google.com</string>
    <string name="update">UPDATE</string>
    <string name="phone">MOBILE NUMBER</string>
    <string name="Credit_balance">Credit Balance</string>
    <string name="dummy_date">Sep\n15</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="dismiss">Dismiss</string>
    <string name="submit">SUBMIT</string>
    <string name="veezee_vault">VeeZee Vault</string>
    <string name="veezee_valet">VeeZee Valet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="veezee_crredits">VeeZee Credits</string>
    <string name="history">History</string>
    <string name="about_us">About</string>
    <string name="help">Help</string>
    <string name="refer_friend">Refer a Friend</string>
    <string name="delete_acct">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_car">Delete Car</string>
    <string name="yes">YES</string>
    <string name="exit">Exit</string>
    <string name="cancel">CANCEL</string>
    <string name="data_will_be_lost">Are you sure?\nAll saved data will be lost.</string>
    <string name="sure_exit">Are you sure?\nYou want to exit.</string>
    <string name="sure_delete_car"> Are you sure\n you want to delete?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="Valet_experience">Valet Experience</string>
    <string name="Thanks_john">Thank John by adding tip!</string>
    <string name="tip">The tip will be send to him without deductions.</string>
    <string name="Share_your">Share your VeeZee Valet experience!</string>
    <string name="to_request_car">To Request Car</string>
    <string name="Continue">CONTINUE</string>
    <string name="skip">SKIP</string>
    <string name="Paying_rs">Paying Rs : </string>
    <string name="pay_via">Pay via</string>
    <string name="dialog_terms">Terms &amp; Conditions</string>
    <string name="discliamer_data">There are many variations of passages of Lorem Ipsum available, but the\nmajority have suffered alteration in some form, by injected humour, or randomised words which don"'"t look even slightly believable.</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry"'"s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry"'"s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="something_went_wrong">Something Went Wrong, Please Try Again...</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="default_notification_channel_id">default</string>
    <string name="REFRESH"><u>REFRESH</u></string>
</resources>