<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.versatilemobitech.VeeZee.views.MontserratTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_description"
        android:text="@string/logout"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        app:font_type="semibold"
        />
    <com.versatilemobitech.VeeZee.views.MontserratTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_3sdp"
        app:font_type="medium"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/are_you_sure"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:id="@+id/txt_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/thickboarded_background"
            android:gravity="center"
            android:paddingLeft="@dimen/_32sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_32sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp"
            app:font_type="semibold" />

        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:id="@+id/txt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/thickboarded_background"
            android:gravity="center"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp"
            app:font_type="semibold" />
    </LinearLayout>

</LinearLayout>