<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.versatilemobitech.VeeZee.Activities.MenuActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccent"
        android:id="@+id/rl_memu">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/image_view_back"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:tint="@android:color/white"
            android:src="@drawable/ic_chevron_left_black_24dp"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:id="@+id/image_view_user"
            android:layout_toRightOf="@id/image_view_back"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_user"/>
        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_user_name"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/image_view_user"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:font_type="semibold"
            android:text="Raj Saksena"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_memu">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_veezee_credits"
        android:layout_below="@id/rl_memu"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_coins"
            android:padding="@dimen/_4sdp"/>
        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veezee_crredits"
            android:textSize="@dimen/_14sdp"
            app:font_type="semibold"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_15sdp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_history"
        android:padding="@dimen/_5sdp"
        android:layout_below="@id/ll_veezee_credits"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:src="@drawable/ic_history_new"
            android:padding="@dimen/_3sdp"/>
        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            app:font_type="semibold"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_15sdp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_about"
        android:padding="@dimen/_5sdp"
        android:layout_below="@id/ll_history"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_round_info_button"
            android:padding="@dimen/_4sdp"/>
        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            app:font_type="semibold"
            android:gravity="center_vertical"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_15sdp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_about"
        android:padding="@dimen/_5sdp"
        android:layout_alignParentEnd="true"

        android:layout_marginEnd="9dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_help" />

        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:id="@+id/txt_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@null"
            android:layout_marginLeft="@dimen/_6sdp"
            android:drawableRight="@drawable/ic_down_arrow"
            android:editable="false"
            app:font_type="semibold"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:focusable="false"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_help"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_below="@id/ll_help"
            android:visibility="gone"
            android:overScrollMode="never"
            android:layout_marginLeft="@dimen/_40sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_refer_friend"
        android:padding="@dimen/_5sdp"
        android:layout_below="@id/rv_help"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_refer"
            android:padding="@dimen/_4sdp"/>
        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refer_friend"
            android:textSize="@dimen/_14sdp"
            app:font_type="semibold"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_15sdp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_delete_acct"
        android:padding="@dimen/_5sdp"
        android:layout_below="@id/ll_refer_friend"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_delete_account"
            android:padding="@dimen/_4sdp"/>
        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_acct"
            app:font_type="semibold"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_15sdp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_logout"
        android:padding="@dimen/_5sdp"
        android:layout_below="@id/ll_delete_acct"
        android:layout_marginLeft="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_exit"
            android:padding="@dimen/_4sdp"/>
        <com.versatilemobitech.VeeZee.views.MontserratTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:font_type="semibold"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:paddingStart="@dimen/_15sdp"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_memu"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:visibility="gone"
        android:id="@+id/rv_memu"/>

        </LinearLayout>
    </ScrollView>
    <com.versatilemobitech.VeeZee.views.MontserratTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/veezee_fm_v"
        android:gravity="center|bottom"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        app:font_type="semibold"
        android:textSize="@dimen/_14sdp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
